# llm_interpretability

./: .gitignore  CosineSimilarities_and_Ablations.ipynb  TWAI project.pptx  pyproject.toml
output/: google_gemma-2b-it|walledai_HarmBench|2025-03-06T12:55:24.txt  zero_ablation|google_gemma-2b-it|walledai_HarmBench|2025-03-26T23:36:45.txt
scripts/: answer_HarmBench_question_zero_ablation.py  answer_HarmBench_questions.py  harmbench_eval.py  keyword_eval.py
